# xrandr-monitor-split

./: README.adoc  pyproject.toml  todo.adoc  tusk.yml
src/: config.py  config.yaml  main.py  xrandr.py
